--- a/game-ui/angular.json
+++ b/game-ui/angular.json
@@ -67,7 +67,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "game-ui:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "proxyConfig": "src/proxy.conf.json",
+            "sslKey": "./ssl/localhost.key",
+            "sslCert": "./ssl/localhost.crt",
+            "ssl": true
           },
           "configurations": {
             "production": {
